# the-last-aibender

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .npmrc  DESIGN.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: ci.yml  gitleaks.yml  trufflehog-weekly.yml
app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/scripts/: build-tokens.ts  lint-tokens.mjs
app/src/: main.tsx
app/src-tauri/: Cargo.toml  README.md  build.rs  entitlements.plist  tauri.conf.json
app/src-tauri/binaries/: .gitignore  README.md
app/src-tauri/capabilities/: default.json
app/src-tauri/scripts/: build-sidecar.sh  ensure-sidecar-placeholder.sh
app/src-tauri/src/: commands.rs  main.rs  sidecar.rs  smoke.rs  tray.rs
core/: README.md  package.json  tsconfig.json
core/scripts/: demo-m1.ts  demo-populated.ts  fix-spawn-helper.mjs
docs/: HANDOFF.md
docs/adr/: 0001-dynamic-channel-panels.md  README.md
docs/contracts/: README.md  bootstrap-file.md  dag-schema.md  hooks-contract.md  integration-suite.md  sqlite-ddl.md  ws-protocol.md
docs/reviews/: README.md  docs-onboarding.md  frontend-correctness.md  optimization-scalability.md  rendered-frontend.md  security.md  x-requirements.md
docs/runbooks/: README.md  account-registry.md  add-a-backend.md  add-an-account.md  bedrock-iac.md  colima.md  hooks-telemetry.md  hygiene.md  kernel-live-spawn.md  launchd.md  live-boot.md  local-dev-start.md  m0-dod.md  (+17 more)
infra/: README.md
spikes/: README.md
(+619 files in other folders)
